src/components/common/global.css
/*
 *   Copyright (c) 2023 Mahindra & Mahindra Ltd.
 *   All rights reserved.
 *   Redistribution and use of any source or binary or in any form, without written approval and permission is prohibited. Please read the Terms of Use, Disclaimer & Privacy Policy on https://www.mahindra.com/
 */

:global .ant-form-vertical .ant-form-item-label>label,
:global .ant-col-24.ant-form-item-label>label,
:global .ant-col-xl-24.ant-form-item-label>label {
    color: #545454;
    font-size: 14px;
    line-height: 23px;
    font-weight: 400;
    margin-bottom: 6px;
}

:global .ant-tree .ant-tree-switcher-leaf-line:before {
    border-inline-end: 1px dashed #d9d9d9;
}

:global .ant-tree .ant-tree-switcher-leaf-line:after {
    border-bottom: 1px dashed #d9d9d9;
}

:global .ant-tree-select-dropdown .ant-select-tree .ant-select-tree-switcher-leaf-line:before {
    border-inline-end: 1px dashed #d9d9d9;
}

:global .ant-tree-select-dropdown .ant-select-tree .ant-select-tree-switcher-leaf-line:after {
    border-bottom: 1px dashed #d9d9d9;
}

:global .ant-input-search>.ant-input-group>.ant-input-group-addon {
    background-color: #fff;
}

:global .ant-btn-default {
    height: 33.5px;
    box-shadow: none;
}

:global .ant-input-search>.ant-input-group>.ant-input-group-addon:last-child .ant-input-search-button:not(.ant-btn-primary),
:global .ant-input-search>.ant-input-group>.ant-input-group-addon:last-child .ant-input-search-button:not(.ant-btn-primary):hover {
    color: #ff3e5b;
    border-color: transparent;
}

:global .ant-select:not(.ant-select-disabled):not(.ant-select-customize-input):not(.ant-pagination-size-changer):hover .ant-select-selector {
    border-color: #0b0b0c !important;
    box-shadow: none;
}

:global .ant-select-dropdown .ant-select-item-option-selected:not(.ant-select-item-option-disabled),
:global .ant-tree-select-dropdown .ant-select-tree .ant-select-tree-node-content-wrapper.ant-select-tree-node-selected,
:global .ant-tree-select-dropdown .ant-select-tree .ant-select-tree-checkbox+span.ant-select-tree-node-selected {
    background-color: transparent !important;
    color: #ff3e5b;
    font-size: 14px;
}

:global .ant-tree-select-dropdown .ant-select-tree .ant-select-tree-node-content-wrapper:hover,
:global .ant-tree-select-dropdown .ant-select-tree .ant-select-tree-checkbox+span:hover {
    background-color: transparent !important;
}

:global .ant-select-dropdown,
:global .ant-input:hover,
:global .ant-input:focus,
:global .ant-input-focused {
    border: 1px solid #0b0b0c;
    box-shadow: 0 0 0 2px rgba(255, 5, 5, 0);
}

:global .ant-select .ant-select-arrow {
    color: #ff3e5b;
}

:global .ant-select.ant-select-disabled .ant-select-arrow {
    color: #b5b5b6;
}

:global .ant-select.ant-select-disabled .ant-select-selector .ant-select-selection-item {
    color: #858585 !important;
}

:global .ant-select-dropdown .ant-select-item-option-active:not(.ant-select-item-option-disabled) {
    background-color: #ffd8de;
    color: #ff3e5b;
}

:global .ant-select-focused:where(.css-dev-only-do-not-override-18twuw5).ant-select:not(.ant-select-disabled):not(.ant-select-customize-input):not(.ant-pagination-size-changer) .ant-select-selector {
    border-color: #0b0b0c;
    box-shadow: none;
}

:global .ant-btn-default {
    background-color: transparent;
}

:global .ant-btn-default.ant-btn-dangerous:disabled {
    border: 1px solid #bfbfbf;
}

:global .ant-btn-default.ant-btn-dangerous:not(:disabled) {
    background-color: transparent;
    color: #ff3e5b !important;
    border: 1px solid #ff3e5b;
}

:global .ant-btn-default.ant-btn-dangerous:not(:disabled):hover {
    background-color: #ff3e5b;
    color: #ffffff !important;
}

/* :global .ant-btn-default.ant-btn-dangerous {
    margin-bottom: 8px;
} */

:global .ant-btn-default.ant-btn-dangerous svg {
    padding-top: 2px;
}

:global .ant-btn-primary.ant-btn-dangerous:disabled,
:global .ant-btn-primary:disabled {
    border-color: #b5b5b6;
}

:global .ant-tree {
    background: #f4f4f4;
}

:global .ant-select:not(.ant-select-customize-input) .ant-select-selector {
    position: relative;
    background-color: #ffffff;
    border: 1px solid #b5b5b6;
    transition: all 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
    border-radius: 4px;
    box-shadow: none;
    height: 36px;
}

:global .ant-select-single:not(.ant-select-customize-input) .ant-select-selector .ant-select-selection-search-input {
    height: 34px;
}

:global .ant-select-focused .ant-select:not(.ant-select-disabled):not(.ant-select-customize-input):not(.ant-pagination-size-changer) .ant-select-selector {
    border: 0 !important;
    border-color: #0b0b0c !important;
    box-shadow: none;
}

:global .ant-empty .ant-empty-footer {
    margin-top: 12px;
}

:global .ant-form-vertical .ant-form-item-label {
    margin: 0;
    padding: 0px;
}

:global .ant-tree .ant-tree-list-holder-inner {
    align-items: flex-start;
    margin-bottom: 50px;
}

:global .ant-modal .ant-modal-content {
    padding: 20px;
    max-height: 300vh;
}

:global .ant-modal .ant-modal-content .ant-modal-close {
    color: #ff3e5b;
}

:global .ant-modal .ant-modal-header {
    margin-bottom: 16px;
}

:global .ant-modal .ant-modal-title {
    border-bottom: 1px solid #dedede;
    padding-bottom: 16px;
    line-height: 24px;
    font-weight: 700;
    font-size: 16px;
    color: #342c2c;
}

:global .ant-modal .ant-modal-title svg {
    vertical-align: sub;
    color: #ff3e5b;
    margin-right: 8px;
    width: 20px;
    height: 20px;
}

:global .ant-modal .ant-modal-close:hover {
    color: #ff3e5b;
    background-color: transparent !important;
}

:global .ant-modal .ant-modal-close {
    top: 22px;
}

:global .ant-modal-body .ant-form .ant-form-item .ant-input-affix-wrapper {
    border: 1px solid #d9d9d9;
}

:global .ant-tree {
    background: transparent;
}

:global .ant-drawer .ant-drawer-header-title {
    display: inline-block;
}

:global .ant-drawer-close {
    float: right !important;
    padding: 4px 0 0 0 !important;
    margin-inline-end: 0 !important;
}

:global .ant-drawer-body .ant-form-item {
    margin-bottom: 24px;
}

:global .ant-drawer-body .ant-input-number {
    width: 48.5%;
}

:global .ant-drawer-body .ant-input-number:last-child {
    margin-left: 0%;
}

:global .ant-drawer-body .ant-input-number {
    width: 100%;
}

:global .ant-drawer-body .ant-picker-range {
    width: 100%;
}

:global .ant-picker {
    height: 36px;
    border-color: #b5b5b6;
}

:global .ant-picker:hover {
    border-color: #0b0b0c;
}

:global .ant-picker-focused {
    box-shadow: none;
}

:global .ant-picker .ant-picker-suffix {
    color: #ff3e5b;
}

:global .ant-picker.ant-picker-disabled {
    background: #e6e6e6;
    border-color: #e6e6e6 !important;
}

:global .ant-form-vertical .ant-form-item-label {
    margin: 0;
    padding: 0px;
    pointer-events: none;
}

:global .ant-tree .ant-tree-list-holder-inner {
    align-items: flex-start;
    margin-bottom: 50px;
}

:global .ant-switch .ant-switch-inner {
    display: block;
    overflow: hidden;
    border-radius: 100px;
    height: 100%;
    position: absolute;
    margin-left: 35px;
    margin-top: -12px;
}

:global .ant-switch.ant-switch-checked .ant-switch-inner .ant-switch-inner-checked {
    margin-inline-start: 0px;
    color: #70c922;
}

:global .ant-switch .ant-switch-inner .ant-switch-inner-unchecked {
    margin-top: -22px;
    margin-inline-start: -10px;
    color: #8e8585;
    margin-inline-end: 9px;
}

:global .ant-switch.ant-switch-checked {
    background: #70c922;
}

:global .ant-switch.ant-switch-checked:hover:not(.ant-switch-disabled) {
    background: #70c922;
}

:global .ant-form-item .ant-form-item-label>label.ant-form-item-required:not(.ant-form-item-required-mark-optional)::before {
    margin-inline-end: 8px;
    margin-top: -2px;
}

:global .ant-modal-mask,
:global body {
    width: 100% !important;
    /* overflow: inherit !important; */
}

:global .ant-collapse>.ant-collapse-item>.ant-collapse-header .ant-collapse-header-texts {
    font-weight: 600;
    font-size: 16px;
}

:global(.ant-card.ant-card-actions) {
    height: 40px;
}

/* AntD Table Pagination */
:global .ant-pagination .ant-pagination-item {
    border: 1px solid #b5b5b6;
}

:global .ant-pagination .ant-pagination-item-active {
    border-color: #ff3e5b !important;
}

:global .ant-pagination .ant-pagination-total-text {
    position: absolute;
    left: 0px;
    z-index: 99;
    width: 110px;
    color: #0b0b0c;
    font-weight: 500;
}

:global .ant-pagination .ant-pagination-options {
    position: absolute;
    left: 110px;
    color: #0b0b0c;
    font-weight: 500;
}

:global .ant-pagination .ant-pagination-options .ant-pagination-options-size-changer .ant-select-selector {
    height: 32px;
}

:global .ant-pagination .ant-pagination-options .ant-pagination-options-size-changer .ant-select-arrow {
    color: #0b0b0c;
}

:global .ant-pagination .ant-pagination-options .ant-select .ant-select-dropdown {
    top: -142px !important;
}

:global .ant-table-wrapper table {
    border: 1px solid #e6e6e6;
    border-radius: 4px;
}

:global .ant-table-wrapper .ant-table .ant-table-content {
    border-radius: 4px 4px 0 0;
}

:global .ant-table-wrapper .ant-table-ping-left:not(.ant-table-has-fix-left) .ant-table-container::before {
    box-shadow: none;
}

:global .ant-table-wrapper .ant-table-ping-right:not(.ant-table-has-fix-right) .ant-table-container::after {
    box-shadow: none;
}

:global .ant-table-wrapper .ant-table-container table>thead>tr:first-child>*:first-child {
    border-start-start-radius: 4px;
}

:global .ant-table-wrapper .ant-table-container table>thead>tr:first-child>*:last-child {
    border-start-end-radius: 4px;
}

:global .ant-table-wrapper .ant-table-tbody>tr:last-child>td:first-child,
:global .ant-table-wrapper .ant-table-tbody>tr.ant-table-row:last-child:hover>td:first-child {
    border-radius: 0 0 0 4px;
}

:global .ant-table-wrapper .ant-table-tbody>tr:last-child>td:last-child,
:global .ant-table-wrapper .ant-table-tbody>tr.ant-table-row:last-child:hover>td:last-child {
    border-radius: 0 0 4px 0;
}

:global .ant-table-wrapper .ant-table-thead>tr>th {
    color: #0b0b0c;
    line-height: 20px;
    background: #f2f2f2;
    border-bottom: none;
    padding: 12px 16px;
}

:global .ant-table-wrapper thead {
    box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.15);
}

:global .ant-table-wrapper .ant-table-tbody>tr>td {
    color: #545454;
    font-weight: 500;
    line-height: 23px;
    border-bottom: 1px solid #e6e6e6;
    padding: 7px 16px;
}

/* :global .ant-table-wrapper .ant-table-tbody>tr>td:last-child {
    padding: 7px;
    padding-left: 16px;
} */

:global .ant-table-wrapper .ant-table-tbody>tr>td:last-child .ant-space .ant-space-item:last-child button {
    margin-right: 0;
}

:global .ant-table-wrapper .ant-table-tbody>tr:last-child>td {
    border-bottom: none;
}

:global .ant-tag-success {
    color: #70c922;
    background: #eefcd2;
    border-color: #70c922;
}

:global .ant-tag-error {
    color: #ed302d;
    background: #fee3d4;
    border-color: #ed302d;
}

:global .ant-tag-orange {
    color: #f99c22;
    background: #fef3d2;
    border-color: #f99c22;
}

:global .ant-tag-blue {
    color: #2782f9;
    background: #d3edfe;
    border-color: #2782f9;
}

:global .ant-tag-has-color {
    color: #545454 !important;
    background: #b5b5b6 !important;
    border-color: #545454 !important;
}

:global .ant-input {
    height: 36px;
    padding: 4px 12px 5px;
    border-color: #b5b5b6;
    color: #0b0b0c;
    border-radius: 4px;
}

@media (max-width: 768px) {
    /* :global .ant-input-group {
        margin-top: 20px;
    } */
}

